Fixing brand color (wasn't working on safari)
I had forgot add the % on the saturation and lightness.
Chrome is smart so it can fix it, but not safari (untested on firefox).

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,7 @@
 
     --bg-dots-transparency: 8%;
 
-    --brand: 175.3 66.3 51.2;
+    --brand: 175.3 66.3% 51.2%;
     --brand-foreground: 240 5.9% 15%;
 
     --warn: 50 91% 65%;
